Write first three paragraphs

--- a/index.html
+++ b/index.html
@@ -1,10 +1,119 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Hello, Basecamp.</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Eczar:400,500,600,700,800" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/typeplate.css">
+    <link rel="stylesheet" href="css/layout.css">
   </head>
 
   <body>
+    <main class="container">
+      <div class="opening">
+        <div class="opening-text">
+          <h1>Hello, Basecamp.</h1>
+          <p>That's me in the photo and yes, that camera was too close to my face.</p>
+        </div>
+
+        <div class="opening-image">
+          <img src="img/avatar.png" class="avatar">
+        </div>
+      </div>
+
+      <div class="clearfix"></div>
+
+      <h2 class="section-title typl8-delta">Who I am</h2>
+
+      <p>
+        My name's Alessandro Desantis (<em>“da-sun-tees”</em> is how you'd spell it) and I am a
+        Ruby developer based in Rome. That's where the Colosseum is, not
+        <a href="https://en.wikipedia.org/wiki/Rome_(New_York)">the city in New York state.</a> (And
+        before you even ask: yes, people have made that mistake.)
+      </p>
+
+      <p>
+        Software development is a family thing here: my uncle and father encouraged me to take it
+        on when I was just nine, which means I've been at this for almost ten years now. I can
+        honestly say that I have enjoyed and continue to enjoy every single second of it: writing
+        software is not a mere assembly line for me—it's a craft. It requires dedication and skill
+        to create a polished, functional product that makes people happy. Things shouldn't <em>just
+        work.</em> They should be beautiful. I thrive when the people's lives are simplified or
+        improved thanks to my work.
+      </p>
+
+      <h2 class="section-title typl8-delta">What I do</h2>
+
+      <p>
+        Right now, I am working as a freelancer at <a href="https://gigster.com">Gigster</a>, where
+        I get to work on a bazillion different projects daily. Gigster is awesome because I am free
+        to work on projects where I can really make an impact. For a concise (I promise!) list of
+        stuff that I have worked and am working on here, you should check out
+        <a href="https://www.linkedin.com/in/alessandro-desantis-08a7a5105">my LinkedIn profile.</a>
+      </p>
+
+      <p>
+        Together with my family and some incredibly talented network engineers, I'm also rocking it
+        with <a href="http://www.interconn.it">InterConn</a>, a wireless ISP whose mission is to
+        bring fast, affordable internet connectivity to those left behind by the big players in the
+        field. I feel honored to be able to serve so many people and gift them with what the rest of
+        us take for granted. InterConn is an amazing opportunity of keeping in touch with the human
+        aspect of my job.
+      </p>
+
+      <p>
+        By the way, everyone's on support at InterConn. Does that remind you of
+        <a href="https://signalvnoise.com/posts/3676-everyone-on-support">someone?</a>
+      </p>
+
+      <h2 class="section-title typl8-delta">What else I do</h2>
+
+      <p>
+        Speaking of non-profitable activities, this is just some of the stuff I do <em>when no
+        one's watching</em>:
+      </p>
+
+      <ul>
+        <li>
+          <strong>I take photos.</strong> <a href="https://500px.com/@alessandro1997">You should
+          check them out.</a> Some people say I'm fairly decent.
+        </li>
+
+        <li>
+          <strong>I listen to synth pop.</strong> Is that still a thing? It is for me. Depeche
+          Mode, here I come!
+        </li>
+
+        <li>
+          <strong>I write code.</strong> When I'm not writing code for a living, I write code for
+          fun. <a href="https://github.com/alessandro1997">Have a look.</a>
+        </li>
+
+        <li>
+          <strong>I write articles.</strong> <a href="https://medium.com/@alessandro1997">I'm on
+          Medium</a>, <a href="https://m.signalvnoise.com">you're on Medium</a>, everyone's on
+          Medium!
+        </li>
+
+        <li>
+          <strong>I write books.</strong> Well, one book, precisely. It's entitled <em>“APIs on
+          Rails” </em> or something.
+        </li>
+
+        <li>
+          <strong>I travel.</strong> Chicago's on my list, too. Perhaps you know someone
+          who can help? <img src="img/eye-roll.png" class="emoji">
+        </li>
+      </ul>
+
+      <h2 class="section-title typl8-delta">I want in</h2>
+
+      <div class="signature">
+        <p>Best,</p>
+        <p>Alessandro</p>
+      </div>
+    </main>
   </body>
 </html>
