--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="css/typeplate.css">
     <link rel="stylesheet" href="css/layout.css">
+
+    <script src="https://use.fontawesome.com/0aee5658a8.js"></script>
   </head>
 
   <body>
@@ -23,8 +25,6 @@
         </div>
       </div>
 
-      <div class="clearfix"></div>
-
       <h2 class="section-title typl8-delta">Who I am</h2>
 
       <p>
@@ -36,12 +36,12 @@
 
       <p>
         Software development is a family thing here: my uncle and father encouraged me to take it
-        on when I was just nine, which means I've been at this for almost ten years now. I can
-        honestly say that I have enjoyed and continue to enjoy every single second of it: writing
-        software is not a mere assembly line for me—it's a craft. It requires dedication and skill
-        to create a polished, functional product that makes people happy. Things shouldn't <em>just
-        work.</em> They should be beautiful. I thrive when the people's lives are simplified or
-        improved thanks to my work.
+        on <strong>when I was only nine,</strong> which means I've been at this for almost ten years
+        now. I can honestly say that I have enjoyed and continue to enjoy every single second of it:
+        <strong>writing software is not a mere assembly line for me—it's a craft.</strong> It
+        requires dedication and skill to create a polished, functional product that makes people
+        happy. Things shouldn't <em>just work.</em> They should be beautiful. <strong>I thrive when
+        the people's lives are simplified or improved thanks to my work.</strong>
       </p>
 
       <h2 class="section-title typl8-delta">What I do</h2>
@@ -64,56 +64,108 @@
       </p>
 
       <p>
-        By the way, everyone's on support at InterConn. Does that remind you of
-        <a href="https://signalvnoise.com/posts/3676-everyone-on-support">someone?</a>
+        By the way, <strong>everyone's on support at InterConn.</strong> Does that remind you of
+        <a href="https://signalvnoise.com/posts/3676-everyone-on-support">anybody?</a>
       </p>
 
       <h2 class="section-title typl8-delta">What else I do</h2>
 
       <p>
         Speaking of non-profitable activities, this is just some of the stuff I do <em>when no
-        one's watching</em>:
+        one's watching:</em>
       </p>
 
-      <ul>
-        <li>
-          <strong>I take photos.</strong> <a href="https://500px.com/@alessandro1997">You should
-          check them out.</a> Some people say I'm fairly decent.
-        </li>
+      <p>
+        <ul>
+          <li>
+            <strong>I take photos.</strong> <a href="https://500px.com/@alessandro1997">You should
+            check them out.</a> Some people say I'm fairly decent.
+          </li>
 
-        <li>
-          <strong>I listen to synth pop.</strong> Is that still a thing? It is for me. Depeche
-          Mode, here I come!
-        </li>
+          <li>
+            <strong>I listen to synthpop.</strong> Is that still a thing? It is for me. Depeche
+            Mode, here I come!
+          </li>
 
-        <li>
-          <strong>I write code.</strong> When I'm not writing code for a living, I write code for
-          fun. <a href="https://github.com/alessandro1997">Have a look.</a>
-        </li>
+          <li>
+            <strong>I write code.</strong> When I'm not writing code for a living, I write code for
+            fun. <a href="https://github.com/alessandro1997">Have a look.</a>
+          </li>
 
-        <li>
-          <strong>I write articles.</strong> <a href="https://medium.com/@alessandro1997">I'm on
-          Medium</a>, <a href="https://m.signalvnoise.com">you're on Medium</a>, everyone's on
-          Medium!
-        </li>
+          <li>
+            <strong>I write articles.</strong> <a href="https://medium.com/@alessandro1997">I'm on
+            Medium</a>, <a href="https://m.signalvnoise.com">you're on Medium</a>, everyone's on
+            Medium!
+          </li>
 
-        <li>
-          <strong>I write books.</strong> Well, one book, precisely. It's entitled <em>“APIs on
-          Rails” </em> or something.
-        </li>
+          <li>
+            <strong>I write books.</strong> Well, one book, precisely. It's entitled <em>“APIs on
+            Rails” </em> or something.
+          </li>
 
-        <li>
-          <strong>I travel.</strong> Chicago's on my list, too. Perhaps you know someone
-          who can help? <img src="img/eye-roll.png" class="emoji">
-        </li>
-      </ul>
+          <li>
+            <strong>I travel.</strong> Chicago's on my list, too. Perhaps you know someone
+            who can help? <img src="img/eye-roll.png" class="emoji">
+          </li>
 
-      <h2 class="section-title typl8-delta">I want in</h2>
+          <li>
+            <strong>I binge-watch TV series.</strong> No spoilers, guys. I mean it. No. Spoilers.
+          </li>
+        </ul>
+      </p>
 
-      <div class="signature">
-        <p>Best,</p>
-        <p>Alessandro</p>
-      </div>
+      <h2 class="section-title typl8-delta">Why I want to join</h2>
+
+      <p>I'm looking to join you, and that's for a couple of reasons.</p>
+
+      <p>
+        First of all, <strong>you have revolutionized the way I write software.</strong> I know, I
+        know: Rails is not Ruby. Except it is: without Rails, I would have never known about Ruby.
+        Without Ruby, I would have never discovered that package managers are a thing. I mean, guys,
+        I used to write PHP. We had <a href="http://pear.php.net/">PEAR</a>. Then we had Symfony and
+        Composer and all of that stuff but, at the end of the day, we were <em>still</em> writing
+        PHP, with all its procedural quirks. <strong>Ruby was magic to me,</strong> so much so that
+        I struggled to understand it for the first days, but when I got it... <em>oh boy!</em>
+      </p>
+
+      <p>
+        Now, I'm not a Rails fanboy. <strong>There are many things which I don't like about
+        Rails.</strong> I don't agree with everything you guys say—in fact, I strongly disagree with
+        some of it, which is one of the reasons you could use me. I've been involved in
+        <a href="https://github.com/trailblazer/trailblazer">open-source projects</a> that deviate
+        from the Rails way of doing things and try to bring some freshness to it. I'm even the
+        author of <a href="https://github.com/pragmarb">such a set of tools</a> (I'd love to hear
+        your thoughts on Pragma, BTW). <strong>I have strong opinions, weakly held.</strong> I will
+        speak up when I think something can be done better and shut up when you show me that I'm
+        wrong. That, I think, brings me to the second reason I'm eager to be an intern at Basecamp.
+      </p>
+
+      <p>
+        <strong>I love your culture.</strong> You speak about
+        <a href="https://m.signalvnoise.com/the-majestic-monolith-29166d022228">Majestic
+        Monoliths</a> at a time where everybody and their dog seem to be using microservices, for
+        everything, all the time. You create <a href="https://github.com/turbolinks/turbolinks-ios">tools</a>
+        that let a single full-stack developer write a mobile app with Good Enough performance,
+        while mobile developers cry at the idea of non-native animations. When others sell their
+        products with pretty UIs and useless whistles, <strong>you sell it with a 275-words letter
+        from your CEO</strong> and well-polished features that your customers actually need.
+        <strong>You focus on people, not software.</strong> You know that
+        <a href="https://m.signalvnoise.com/basecamp-3-work-can-wait-4adfb285c84b#.351ptz9j8">Work
+        Can Wait</a> because you know that, ultimately, our only goal is to live awesome lives.
+      </p>
+
+      <p><strong>Let's make 2017 the most awesome summer yet, Basecamp.</strong> I'm ready.</p>
+
+      <footer>
+        <div class="signature">
+          <p>Sincerely,</p>
+          <p>Alessandro</p>
+        </div>
+
+        <div class="icon">
+          <i class="fa fa-heart heart"></i>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
