Make small corrections

--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
         Rails.</strong> I don't agree with everything you guys say—in fact, I strongly disagree with
         some of it, which is one of the reasons you could use me. I've been involved in
         <a href="https://github.com/trailblazer/trailblazer">open-source projects</a> that deviate
-        from the Rails way of doing things and try to bring some freshness to it. I'm even the
-        author of <a href="https://github.com/pragmarb">such a set of tools</a> (I'd love to hear
-        your thoughts on Pragma, BTW). <strong>I have strong opinions, weakly held.</strong> I will
-        speak up when I think something can be done better and shut up when you show me that I'm
-        wrong. That, I think, brings me to the second reason I'm eager to be an intern at Basecamp.
+        from the Rails way of doing things. I'm even the author of <a href="https://github.com/pragmarb">such
+        a set of tools</a> (I'd love to hear your thoughts on Pragma, BTW). <strong>I have strong
+        opinions, weakly held.</strong> I will speak up when I think something can be done better
+        and shut up when you show me that I'm wrong. That brings me to the second reason I'm eager
+        to work at Basecamp.
       </p>
 
       <p>
