Simplify CSS selectors

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </div>
 
         <div class="icon">
-          <i class="fa fa-heart heart"></i>
+          <i class="fa fa-heart heart heart-icon"></i>
         </div>
       </footer>
     </main>
